<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:orderInCategory="106"
        android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:orderInCategory="106"
                android:title="@string/action_settings" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_convolver"
            android:icon="@drawable/ic_functions_black_24dp"
            android:title="@string/convolver" />
        <item
            android:id="@+id/nav_as"
            android:icon="@drawable/ic_leak_remove_black_24dp"
            android:title="@string/adaptive_sound" />
        <item
            android:id="@+id/nav_al"
            android:icon="@drawable/ic_volume_up_black_24dp"
            android:title="@string/volume_leveler" />
    </group>

</menu>
