<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.audio.yametech.lexaudio.AdaptiveSoundFragment">


    <SeekBar
        android:id="@+id/seekBarAdaptInterval"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="43dp"
        android:max="9"
        android:progress="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMaxLevel" />

    <TextView
        android:id="@+id/textViewMaxLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/maximum_boost"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMaxLevel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdaptiveSound" />

    <TextView
        android:id="@+id/textViewAdaptInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/adapt_interval"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAdaptInterval"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentMaxLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMaxLevel" />

    <TextView
        android:id="@+id/textViewCurrentAdaptInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAdaptInterval"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewAdaptiveSound"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/adaptive_sound"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchAdaptiveSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/on_off"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarMaxLevel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="86dp"
        android:max="17"
        android:progress="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
