<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.audio.yametech.lexaudio.ConvolverFragment">


    <SeekBar
        android:id="@+id/seekBarRoomLevel"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="86dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarHFRoomLevel"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRoomLevel" />

    <SeekBar
        android:id="@+id/seekBarReverbLevel"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBarHFRoomLevel" />

    <SeekBar
        android:id="@+id/seekBarReflectionLevel"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBarReverbLevel" />

    <SeekBar
        android:id="@+id/seekBarDecayTime"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBarReflectionLevel" />

    <Switch
        android:id="@+id/switchConvolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/on_off"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewConvolver"
        android:layout_width="82dp"
        android:layout_height="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/convolver"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRoomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConvolver"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarRoomLevel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewHFRoomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hf_room_level"
        app:layout_constraintBottom_toTopOf="@+id/seekBarHFRoomLevel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRoomLevel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewReverbLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reverb_level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarHFRoomLevel"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarReverbLevel"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textViewReflectionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reflection_level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarReverbLevel"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarReflectionLevel" />

    <TextView
        android:id="@+id/textViewDecayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/decay_time"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDecayTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarReflectionLevel" />

    <Button
        android:id="@+id/buttonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:elevation="0dp"
        android:text="@string/ddefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentRoomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarRoomLevel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentHFRoomLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarHFRoomLevel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentReverbLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarReverbLevel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentReflectionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarReflectionLevel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentDecayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp"
        android:text="@string/not_in_range"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDecayTime"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
